force-app/main/default/objects/ssot__PromotionLoyaltyPartnerProduct__dlm/fields/ssot__rel_1697761196468_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761196468_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionLoyaltyPartnerProduct_Loyal_rel</label>
    <referenceTo>ssot__LoyaltyProgramPartner__dlm</referenceTo>
    <relationshipLabel>PromotionLoyaltyPartnerProduct_Loyal_rel</relationshipLabel>
    <relationshipName>rel_1697761196468_end</relationshipName>
    <type>Lookup</type>
</CustomField>