force-app/main/default/objects/ssot__PromotionLoyaltyPartnerProduct__dlm/fields/ssot__rel_1697761196534_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761196534_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionLoyaltyPartnerProduct_Promo_rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>PromotionLoyaltyPartnerProduct_Promo_rel</relationshipLabel>
    <relationshipName>rel_1697761196534_end</relationshipName>
    <type>Lookup</type>
</CustomField>